<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="banner_ad_unit_id">ca-app-pub-4082899616235442/4060800411</string>
    <string name="action_finish">Finalizar</string>
    <string name="action_next">Siguiente</string>
    <string name="action_previous">Anterior</string>
    <string name="action_settings">Ajustes</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_agregar_fraccion">Agregar fracción</string>
    <string name="boton_agregar_numero">Agregar número</string>
    <string name="boton_cai">C.A.I.</string>
    <string name="boton_cam">C.A.M.</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_equivalentes">Equivalentes</string>
    <string name="boton_mayor">Mayor</string>
    <string name="boton_mcd">M.C.D.</string>
    <string name="boton_mcm">M.C.M.</string>
    <string name="boton_reciprocas">Recíprocas</string>
    <string name="boton_rein">Rein</string>
    <string name="boton_reiniciar_fraccion">Reiniciar</string>
    <string name="boton_reiniciar_numeros">Reiniciar números</string>
    <string name="boton_remover_fraccion">Remover</string>
    <string name="boton_simplificar">Simplificar</string>
    <string name="CAL_MCD_IND">Se calculará el máximo común divisor de los siguientes números:</string>
    <string name="CAL_MCD_SX_EXP">El máximo común divisor (MCD) es el número más grande entre el cual son divisibles un conjunto de números.</string>
    <string name="CAL_MCD_SX_INT">Para calcularlo tendremos un valor de prueba que comenzará en 2, y dividiremos todos los números entre ese valor. Si la división de todos los números es exacta, el valor de prueba se convierte en un factor del MCD. Seguimos probando con el mismo valor, y cuando al menos una de las divisiones no sea exacta, el valor de prueba aumenta una unidad y se repite el procedimiento. El cálculo termina cuando el valor de prueba se vuelve igual a alguno de los números. </string>
    <string name="CAL_MCD_SX_RES">El MCD es igual al producto de los factores encontrados:</string>
    <string name="CAL_MCM_IND">Se calculará el mínimo común múltiplo de los siguientes números:</string>
    <string name="CAL_MCM_NX_RES">El mcm es:</string>
    <string name="CAL_MCM_SX_EXP">El mínimo común múltiplo (mcm) es el número más pequeño que es divisible entre un conjunto de números.</string>
    <string name="CAL_MCM_SX_INT"> Para calcularlo tendremos un valor de prueba que comenzará en 2, y dividiremos todos los números entre ese valor. Si la división de al menos un número es exacta, el valor de prueba se convierte en un factor del mcm. Seguimos probando con el mismo valor, y cuando ninguna de las divisiones sea exacta, el valor de prueba aumenta una unidad y se repite el procedimiento. El cálculo termina cuando todos los números se convierten en 1.</string>
    <string name="CAL_MCM_SX_RES">El mcm es igual al producto de los factores encontrados:</string>
    <string name="calculadora">Calculadora</string>
    <string name="desarrollado_por">Desarrollado por: Porfirio Ángel Díaz Sánchez</string>
    <string name="DIV_SIM_NX">Se resuelve con multiplicaciones cruzadas:</string>
    <string name="DIV_SIM_SX">Para resolver una división de dos fracciones se llevan a cabo dos multiplicaciones cruzadas. El numerador del resultado es igual al producto del numerador de la primera fracción por el denominador de la segunda, y el denominador del resultado es igual al producto del numerador de la segunda fracción por el denominador de la primera.</string>
    <string name="DIVS_NX">Se dividen las fracciones por pares:</string>
    <string name="DIVS_SX">Una división de más de dos fracciones se resuelve agrupando en pares las fracciones y resolviendo una por una todas las divisiones simples.</string>
    <string name="explicacion">Explicación</string>
    <string name="explicacion_detallada">Detallada</string>
    <string name="explicacion_no_detallada">Simple</string>
    <string name="FR_CAI_DEN_EXA">Se establece 1 como el denominador de la fracción.</string>
    <string name="FR_CAI_IND">Se convertirá a impropia la siguiente fracción:</string>
    <string name="FR_CAI_SX_DES">Una fracción que tiene expresadas una parte entera y una fraccionaria es una fracción mixta. Se puede agregar la parte entera a la fraccionaria para que así quede representada solamente como una fracción impropia.</string>
    <string name="FR_CAI_SX_OPE">El numerador es igual al numerador original, sumándole el producto del entero por el denominador de la fracción. El entero se elimina y el denominador queda igual.</string>
    <string name="FR_CAM_IND">Se convertirá a mixta la siguiente fracción:</string>
    <string name="FR_CAM_NOIMP">Esta fracción no es impropia, no se puede convertir.</string>
    <string name="FR_CAM_NOMIX">Esta fracción no es mixta, no se puede convertir.</string>
    <string name="FR_CAM_NOSIMP">Esta fracción no es impropia ni reducible, no se puede simplificar.</string>
    <string name="FR_CAM_SX_CII_EXA">Pero tenemos que esta división es exacta, por lo que el resultado queda representado solamente con el entero, y se puede comprobar haciendo la siguiente operación:</string>
    <string name="FR_CAM_SX_CIII_ENT">Ahora es donde retomamos la parte entera que habíamos ignorado, donde tan sólo debemos sumarla al entero de la fracción que acabamos de determinar:</string>
    <string name="FR_CAM_SX_CIII_MIX">Pero como la fracción ya está representada en forma de número mixto, solo tomaremos en cuenta la parte fraccionaria por ahora.</string>
    <string name="FR_CAM_SX_DES">Una fracción cuyo numerador es más grande que el denominador es impropia. Esto quiere decir que contiene una parte entera, por lo que se le puede extraer y así obtener una fracción mixta.</string>
    <string name="FR_CAM_SX_DET_DEN">Por último, el denominador de la fracción no cambia y las operaciones realizadas pueden representarse de la siguiente manera:</string>
    <string name="FR_CAM_SX_DET_ENT">El entero de la fracción resulta de dividir el numerador entre el denominador, sin tomar en cuenta los decimales.</string>
    <string name="FR_CAM_SX_DET_NUM">El numerador de la fracción resulta de multiplicar el valor anteriormente calculado por el denominador de la fracción y restarlo del numerador original.</string>
    <string name="FR_RESULTADO">Lo que nos da como resultado:</string>
    <string name="FR_SIM_IND">Se simplificará la siguiente fracción:</string>
    <string name="FR_SIM_MCD">Encontramos el MCD entre el numerador y el denominador:</string>
    <string name="FR_SIM_SX_CAM">Comparando el numerador con el denominador tenemos que el primero es mayor, por lo tanto la fracción es impropia, así que se debe convertir a mixta.</string>
    <string name="FR_SIM_SX_DIV">Por último se dividen el numerador y el denominador entre el MCD que acabamos de calcular:</string>
    <string name="FR_SIM_SX_INT">Simplificar una fracción significa, reducirla a una equivalente pero más simple.</string>
    <string name="FR_SIM_SX_UNI_MIX">Como el numerador y el denominador son iguales, la parte fraccionaria tiene un valor de 1, así que sólo se lo sumamos al valor de la parte entera.</string>
    <string name="FR_SIM_SX_UNI_NOMIX">Una fracción en la que el numerador y el denominador son iguales, se llama fracción unidad, por lo que su valor es 1.</string>
    <string name="FUN_CAI_FRACS_RES">Las fracciones quedan así:</string>
    <string name="FUN_DET_EQU">Se determinará si las siguientes fracciones son equivalentes:</string>
    <string name="FUN_DET_MAY">Se determinará cuál de las siguientes fracciones es la mayor:</string>
    <string name="FUN_DET_REC">Se determinará si las siguientes fracciones son recíprocas:</string>
    <string name="FUN_INST_EQU">Dos fracciones son equivalentes si los productos del numerador de una por el denominador de la otra son iguales.</string>
    <string name="FUN_INST_MAY">Para saber cuál de las fracciones es mayor se multiplica el numerador de una por el denominador de la otra, la fracción mayor es la que cuyo numerador corresponde al producto mayor de los anteriormente calculados.</string>
    <string name="FUN_INST_REC">Dos fracciones son recíprocas si el producto de sus numeradores es igual al producto de sus denominadores.</string>
    <string name="FUN_PLT">Por lo tanto:</string>
    <string name="FUN_RES_IGU">Las fracciones son iguales</string>
    <string name="FUN_RES_MAY">La mayor es:</string>
    <string name="FUN_RES_NO_EQU">No son equivalentes</string>
    <string name="FUN_RES_NO_REC">No son recíprocas</string>
    <string name="FUN_RES_SI_EQU">Sí son equivalentes</string>
    <string name="FUN_RES_SI_REC">Sí son recíprocas</string>
    <string name="idioma">Idioma</string>
    <string name="idioma_espanol">Español</string>
    <string name="idioma_ingles">Inglés</string>
    <string name="mensaje_cambio_explicacion">El nivel de explicación cambiará la próxima vez que resuelvas una operación</string>
    <string name="mensaje_cambio_idioma">El idioma cambiará la próxima vez que abras la aplicación</string>
    <string name="MIX_NX_GRUP">Se agrupan las multiplicaciones y divisiones y se resuelven:</string>
    <string name="MIX_NX_SUMRES">Se resuelven las sumas y restas:</string>
    <string name="MIX_SX_GRUP">Cuando tenemos una operación en la que se combinan sumas o restas con multiplicaciones o divisiones, cambia el orden de resolución de la operación. Primero se resuelven las multiplicaciones y divisiones, y por último, las sumas y restas. Lo que haremos es agrupar las operaciones de la siguiente manera:</string>
    <string name="MIX_SX_PAREN">Resolvemos primero las operaciones que están dentro de los paréntesis:</string>
    <string name="MIX_SX_SUMRES">Por último resolvemos las sumas y restas resultantes:</string>
    <string name="MUL_DIV_NX_GRUP">Se agrupa la primera fracción con las multiplicaciones y se resuelve, después se resuelven las divisiones.</string>
    <string name="MUL_DIV_SX_GRUP">Para resolver una operación donde tenemos multiplicaciones y divisiones juntas, agruparemos la primera fracción con todas las que están multiplicando. Después, al resultado se le irán dividiendo una por una las fracciones restantes.</string>
    <string name="MUL_NX">Se multiplican los numeradores entre sí, al igual que los denominadores:</string>
    <string name="MUL_SX">El numerador del resultado de una multiplicación de fracciones es igual al producto de los numeradores, y a su vez, el denominador es igual al producto de los denominadores:</string>
    <string name="OPE_EMP_ESM">Esta fracción es mixta:</string>
    <string name="OPE_INI">Se resolverá la siguiente operación:</string>
    <string name="OPE_NX_CAI">Se convierten las fracciones mixtas a impropias:</string>
    <string name="OPE_NX_RES_SIM">La fracción simplificada es:</string>
    <string name="OPE_RES">El resultado de la operación es:</string>
    <string name="OPE_RES_CONV">La operación queda así:</string>
    <string name="OPE_SX_CAI">Para poder llevar a cabo la operación, primero debemos convertir todas las fracciones mixtas a impropias:</string>
    <string name="OPE_SX_EMP_CAI">Para comenzar con la operación, primero se representarán todas las fracciones de la misma forma, convirtiendo las que sean mixtas en impropias.</string>
    <string name="resumen_explicacion">Elige el tipo de explicación para los procedimientos de las operaciones</string>
    <string name="resumen_idioma">Elige el idioma de la aplicación</string>
    <string name="step">Paso <xliff:g id="step_number">%1$d</xliff:g>:</string>
    <string name="step_calculos_descripcion">Calcula el Mínimo Común Múltiplo y Máximo Común Divisor entre varios números.</string>
    <string name="step_calculos_titulo">Cálculos auxiliares</string>
</resources>